--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
-  "name": "node-socketio-chat",
+  "name": "socket-chat",
   "version": "0.0.1",
-  "description": "testing socket.io",
+  "description": "Socket.io chat app",
+  "author": "Valtteri Karppinen",
+  "repository": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "socket.io": "^2.0.1"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "socket.io": "^2.0.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.4.0",
+    "webpack": "^2.6.1"
+  },
+  "scripts": {
+    "app": "concurrently --kill-others \"webpack --colors --watch\" \"node server.js\""
   }
 }
