--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently --kill-others \"webpack --colors --watch\" \"node server.js\""
+    "dev": "concurrently --kill-others \"webpack --colors --watch\" \"node server.js\"",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress"
   }
 }
