add webpack to deps to allow heroku post-build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.15.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "socket.io": "^2.0.2"
+    "socket.io": "^2.0.2",
+    "webpack": "^2.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
